--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
     "node-sass": "^4.13.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
