--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
   "name": "theatre",
   "version": "1.0.0",
-  "description": "",
+  "description": "theatre studio \"Ptah\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "node-sass --watch styles/sass -o styles/css"
+    "start": "webpack-dev-server --open --mode development",
+    "build": "webpack -p"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mykhailohoy/theatre-studio-ptah.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mykhailohoy/theatre-studio-ptah/issues"
+  },
+  "homepage": "https://github.com/mykhailohoy/theatre-studio-ptah#readme",
   "dependencies": {
-    "@glidejs/glide": "^3.4.1",
-    "node-sass": "^4.13.1"
+    "@babel/core": "^7.9.0"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^3.5.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.4",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
