--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
   "name": "theatre",
   "version": "1.0.0",
-  "description": "theatre studio \"Ptah\"",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
+    "start": "webpack-dev-server",
     "build": "webpack -p"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mykhailohoy/theatre-studio-ptah.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mykhailohoy/theatre-studio-ptah/issues"
-  },
-  "homepage": "https://github.com/mykhailohoy/theatre-studio-ptah#readme",
-  "dependencies": {
-    "@babel/core": "^7.9.0"
-  },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
-    "babel-preset-es2015": "^6.24.1",
+    "core-js": "^3.6.5",
     "css-loader": "^3.5.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
@@ -32,5 +20,10 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "@glidejs/glide": "^3.4.1",
+    "postcss-loader": "^3.0.0",
+    "regenerator-runtime": "^0.13.5"
   }
 }
