--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "postcss-loader": "^3.0.0",
     "regenerator-runtime": "^0.13.5"
   }
